# texrel-like-environments

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  scratchpad.ipynb
tests/: test_environment.py
texrelenv/: colour.py  dataset.py  environment.py  exceptions.py
